Use port 4000 since 3000 in use

--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,7 @@
     "build": "next build --turbopack",
     "dev": "cross-env PORT=4000 next dev --turbopack",
     "lint": "eslint",
-    "start": "next start"
+    "start": "cross-env PORT=4000 next start"
   },
   "type": "module",
   "version": "0.1.0"
