--- a/app/package.json
+++ b/app/package.json
@@ -2,12 +2,15 @@
   "author": "Joe Chung",
   "dependencies": {
     "@graphql-ts/lib": "workspace:*",
+    "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.2",
+    "@monaco-editor/react": "^4.7.0",
     "framer-motion": "^12.23.12",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "shiki": "^3.11.0"
+    "shiki": "^3.11.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
