--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^20.19.11",
+    "esbuild": "^0.25.9",
+    "esbuild-node-externals": "^1.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
@@ -18,7 +20,7 @@
   "name": "@graphql-ts/api",
   "packageManager": "pnpm@10.15.0",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "node build.mjs",
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
