--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,8 @@
   "packageManager": "pnpm@10.15.0",
   "scripts": {
     "build": "node build.mjs",
+    "format": "biome check --write .",
+    "lint": "biome check .",
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
