--- a/cli/package.json
+++ b/cli/package.json
@@ -16,6 +16,8 @@
   "packageManager": "pnpm@10.15.0",
   "scripts": {
     "build": "node ./build.mjs",
+    "format": "biome check --write .",
+    "lint": "biome check .",
     "start": "node ./dist/index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
