--- a/lib/package.json
+++ b/lib/package.json
@@ -9,7 +9,7 @@
     "esbuild-node-externals": "^1.18.0",
     "typescript": "^5.9.2"
   },
-  "license": "MIt",
+  "license": "MIT",
   "main": "./dist/index.js",
   "name": "@graphql-ts/lib",
   "packageManager": "pnpm@10.15.0",
@@ -17,6 +17,8 @@
     "build": "pnpm run build:script && pnpm run build:types",
     "build:script": "node ./build.mjs",
     "build:types": "tsc --project tsconfig.types.json",
+    "format": "biome check --write .",
+    "lint": "biome check .",
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
