--- a/app/package.json
+++ b/app/package.json
@@ -5,10 +5,10 @@
     "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
     "framer-motion": "^12.23.12",
+    "graphql-http": "^1.22.4",
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "swr": "^2.3.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
