--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "packageManager": "pnpm@10.15.0",
   "private": true,
   "scripts": {
-    "build": "pnpm -r run build",
+    "build": "turbo run build",
     "format": "pnpm -r run format",
     "lint": "pnpm -r run lint",
     "test": "pnpm -r run test"
@@ -22,6 +22,7 @@
     "lib"
   ],
   "devDependencies": {
-    "@biomejs/biome": "^2.2.2"
+    "@biomejs/biome": "^2.2.2",
+    "turbo": "^2.5.6"
   }
 }
