--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "author": "Joe Chung",
   "dependencies": {
-    "@heroui/react": "^2.8.2"
+    "@heroui/react": "^2.8.2",
+    "next": "^15.5.2"
   },
   "license": "MIT",
   "name": "graphql-ts",
