Configure output directoryies in turbo.json
- Remove .turbo files

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
 	"tasks": {
 		"build": {
 			"dependsOn": ["^build"],
-			"outputs": ["app/.next/**"]
+			"outputs": ["app/.next/**", "api/dist/**", "cli/dist/**", "lib/dist/**"]
 		}
 	}
 }
