--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"jiti": "^2.6.0",
 		"postcss": "^8.5.6",
+		"prettier": "^3.6.2",
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5"
 	},
@@ -28,7 +29,7 @@
 	"scripts": {
 		"build": "next build --turbopack",
 		"dev": "next dev --turbopack",
-		"format": "biome check --write .",
+		"format": "prettier --write .",
 		"lint": "eslint",
 		"start": "next start"
 	},
