--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,12 @@
 		"react-dom": "19.1.1"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3",
+		"@eslint/eslintrc": "^3.3.1",
 		"@tailwindcss/postcss": "^4.1.13",
-		"@types/react": "^19.1.14",
+		"@types/react": "^19.1.15",
 		"@types/react-dom": "^19.1.9",
 		"cross-env": "^10.0.0",
-		"eslint-config-next": "15.5.3",
+		"eslint-config-next": "15.5.4",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"jiti": "^2.6.0",
 		"postcss": "^8.5.6",
@@ -30,7 +30,7 @@
 		"build": "next build --turbopack",
 		"dev": "next dev --turbopack",
 		"format": "prettier --write .",
-		"lint": "eslint",
+		"lint": "eslint --concurrency=auto",
 		"start": "next start"
 	},
 	"type": "module",
